--- a/source-css/flutquisition.css
+++ b/source-css/flutquisition.css
@@ -1,5 +1,114 @@
 /* EMOOOOOOTES */
 
+a[href|="/salutesmeg"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 256px;
+    height: 192px;
+    background-image:url(%%smegrimmer%%)
+}
+
+a[href|="/smegheadponyrimmer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 200px;
+    background-image:url(%%smegheadponyrimmer%%)
+}
+
+a[href|="/flutterwrath"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 200px;
+    background-image:url(%%flutterwrath%%)
+}
+
+
+a[href|="/flutterlenny"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 166px;
+    height: 200px;
+    background-image:url(%%flutterlenny%%)
+}
+
+a[href|="/chefpinkiefacesquish"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 164px;
+    background-image:url(%%chefpinkiefacesquish%%)
+}
+
+a[href|="/twipleased"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image:url(%%twipleased%%)
+}
+
+a[href|="/spikecry"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 186px;
+    background-image:url(%%spikecry%%)
+}
+
+a[href|="/vinylsmug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image:url(%%vinylsmug%%)
+}
+
+a[href|="/berrybliss"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image:url(%%berrybliss%%)
+}
+
+a[href|="/clickityhackbacktrack"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 113px;
+    background-image:url(%%clickityhackbacktrack%%)
+}
+
+a[href|="/britanniaslump"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 97px;
+    background-image:url(%%BritanniaSlump%%)
+}
+
+a[href|="/emeraldkeyboardhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 154px;
+    height: 200px;
+    background-image:url(%%Emboard%%)
+}
+
 a[href|="/flutterproud"] {
     display: block;
     clear: none;
@@ -340,3 +449,12 @@ a[href|="/kittyshy"] {
  height: 208px;
  background-image: url(%%Fluffershy%%);
 } 
+
+a[href|="/flutqbat1"] {
+    display: block;
+    clear: none;
+    float: left;
+width: 447px;
+   height: 447px;
+    background-image:url(%%flutqbat1%%);
+}
