--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -3,7 +3,7 @@
 
 /* Changes background  */
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%tinybee%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%buzz%%) fixed no-repeat 66% 100% !important;
 }go
 
 
@@ -20,7 +20,7 @@
 /* Banner image and associated height values */
 
  #header #header-bottom-left {
-   background: url(%%spellingnatzi%%) 50% 0px !important;
+   background: url(%%bestponestillRD%%) 50% 0px !important;
    background-repeat: no-repeat!important;
    background-position: 35% 0px;
 }
@@ -577,6 +577,7 @@ background-repeat: no-repeat;
 .flair-xelnaga:after { background-position: 0px -6930px }
 .flair-Alvin086:after { background-position: 0px -6960px }
 .flair-DoomKey:after { background-position: 0px -6990px }
+.flair-IcyNudibranch:after { background-position: 0px -7020px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: #222!important; }
