--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2214,6 +2214,16 @@ a[href|="/tavidoom"] {
  background-image: url(%%Octavia-von-Doom-emote%%);
 } 
  
+a[href|="/taviqmaid1"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ height: 208px;
+width: 256px;
+ background-image: url(%%TQM1%%);
+
+} 
+
 
 a[href|="/piggyty"] {  
  display: block;
