Stylesheet/emote/tag updates 2015-09-23

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -59,9 +59,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Factory Standard Ploungers"}
+div.titlebox .subscribers span.number:after {content:" spoiled Plizzards"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Rare Ploungers" }
+div.titlebox p.users-online span.number:after { content: " watching leaked episodes" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -999,7 +999,7 @@ a.author[href$="UserNameHere"]::before {font-size:10px!important; visibility:vis
 
 a.author[href$="Shercock_Holmes"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 
-a.author[href$="Shercock_Holmes"]::before {font-size:10px!important; visibility:visible!important; content: "Shercock_Holmes"}
+a.author[href$="Shercock_Holmes"]::before {font-size:10px!important; visibility:visible!important; content: "Johcock_Watson"}
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {Display:none}
 
