--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -742,7 +742,8 @@ a.author[href$=gremlinpower],
 a.author[href$=Doktor_Elcaro],
 a.author[href$=The_Assistant],
 a.author[href$=topkekbestkek],
-a.author[href$=DoomKey]
+a.author[href$=DoomKey],
+a.author[href$=thisisgenny]
 
 { 
 font-size:0!important; 
@@ -873,7 +874,9 @@ a.author[href$=gremlinpower]:before,
 a.author[href$=Doktor_Elcaro]:before,
 a.author[href$=The_Assistant]:before,
 a.author[href$=topkekbestkek]:before,
-a.author[href$=DoomKey]:before
+a.author[href$=DoomKey]:before,
+a.author[href$=DRANKLE]:before,
+a.author[href$=thisisgenny]:before
 
 {
 font-size:10px!important; 
@@ -891,7 +894,7 @@ a.author[href$="pr0n0tr0n"]:before,a.author[href$="theodorejhooker"]:before {con
 a.author[href$="CarlosAmuroRay"]:before {content:"ChuckAmuroRay"}
 a.author[href$="0x_"]:before {content:"ox"}
 a.author[href$="CogglerSenpai"]:before {content:"Pretty Sailor Soldier Coggler"}
-a.author[href$="thezooman123"]:before {content:"Racist"}
+a.author[href$="thezooman123"]:before {content:"Honky White Boy"}
 a.author[href$="numberlock"]:before {content:"BeerPony"}
 a.author[href$="thedarklordkyp"]:before {content:"A_Drunk_Changeling"}
 a.author[href$="fwinest_JediThug"]:before {content:"Wincest_JediThug"}
@@ -947,7 +950,7 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Edriss562]:before {content:"Esplendid"}
+a.author[href$=Edriss562]:before {content:"SKELESPLIN"}
 a.author[href$=Jeroknite]:before {content:"JokerBee"; font-size:15px !important}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
 a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
@@ -973,7 +976,7 @@ a.author[href$=LlamaInDrag]:before { content:"A FKN DINOSAUR" }
 a.author[href$=Nagashizuri]:before { content:"Maga" }
 a.author[href$=andresonic1]:before { content:"Fake" }
 a.author[href$=Bflat13]:before { content:"MOTHER FUCKING SUGAR!" }
-a.author[href$=clonger]:before { content:"The Other Mod" }
+a.author[href$=clonger]:before { content:"Clinger" }
 a.author[href$=FUCKING_HATE_REDDIT]:before { content:"Freakin' Dislike Webplace" }
 a.author[href$=andysonic3]:before { content:"Chibi Sailor Andy" }
 a.author[href$=andysonic0]:before { content:"Mini Andy" }
@@ -990,7 +993,7 @@ a.author[href$=ZhilTP9112]:before { content:"Mechafag Zhil" }
 a.author[href$=I_Steal_Subreddits]:before { content:"RowBotnick" }
 a.author[href$=Beatbawx]:before { content:"BeatBonesBawx" }
 a.author[href$=Username_Steve_Again]:before { content:"Username_Steve" }
-a.author[href$=BitJit]:before { content:"Rocketmaan" }
+a.author[href$=BitJit]:before { content:"Just BitJit" }
 a.author[href$=Solidus_Tripsy]:before { content:"Tripsy" }
 a.author[href$=videogamewonder]:before { content:"Vudya" }
 a.author[href$=agentgamma]:before { content:"Sergeant of Master Sergeants Most Important Person of Extreme Sergeants to the Max Gamma" }
@@ -1000,7 +1003,9 @@ a.author[href$=Doktor_Elcaro]:before { content:"get pretty coggler pony to chang
 a.author[href$=The_Assistant]:before { content:"SuperAtomica" }
 a.author[href$=topkekbestkek]:before { content:"Partypoops McFlaccid" }
 a.author[href$=DoomKey]:before { content:"Scarfsickle" }
-a.author[href$=spearstuff]:before { content:"Spearstuffed" }
+a.author[href$=spearstuff]:before { content:"spearstuff" }
+a.author[href$=DRANKLE]:before { content:"T-Light aka " }
+a.author[href$=thisisgenny]:before { content:"genny" }
 
 /* Replacing puppy's name with a picture of derpy */
 a.author[href$=iiRockpuppy]:before 
@@ -1102,6 +1107,7 @@ a.author[href$=Solidus_Tripsy]:after,
 a.author[href$=RAINBOW_PONY_SEMEN]:after,
 a.author[href$=DoomKey]:after
 
+
 {
 color:#000; 
 font-size:10px!important; 
@@ -1171,8 +1177,8 @@ a.author[href$="10z20Luka"]:after { content:" (Wears, a flaming kilt made from t
 a.author[href$=JIVEprinting]:after { content:" Christfag" }
 a.author[href$="Conky_"]:after { content:" In a Lot of Trouble, Mr." }
 a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
-a.author[href$="clonger"]:after { content:" please leave a message after the beep"; color:green}
-a.author[href$="spearstuff"]:after { content:" help what's going on?"}
+a.author[href$="clonger"]:after { content:" the css wizard"; color:green}
+a.author[href$="spearstuff"]:after { content:" i figured it out :D"}
 a.author[href$="andysonic3"]:after { content:" THE NO FUN DEPUTY" }
 a.author[href$="andysonic0"]:after { content:" THE NO FUN CHIEF" }
 a.author[href$="Andysonic-1"]:after { content:" THE NO FUN ROOKIE" }
